feature(input; is_; fork_; +-*/ ) test(added test ) Two big things here : input is now the official internal type to hold types and with some magic specialization of fold_left and pipe_, all inputs are now invisible if required. fork_<Fs...> is very simple : All inputs are copied to all the metafunction Fs. The last type is an input and we make sure they disappear. is_<Ts...> checks if the inputs received is the same as Ts... Also, more arithmetic was added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,14 @@ cmake_minimum_required(VERSION 3.0)
 project(rage_module VERSION 0.5 LANGUAGES C CXX)
 
 add_subdirectory(include)
+
+enable_testing()
 add_subdirectory(test)
+
+
 
 #set_property(TARGET rage  PROPERTY CXX_STANDARD 11)
 add_executable(rage_test include/rage.cpp) 
 
 target_link_libraries(rage_test rage)
-
+add_test(Test_of_Rage rage_test)
