rename(renamed everything to type_expr) changed the namespace to te

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 #CMAKE
 cmake_minimum_required(VERSION 3.0)
 
-project(rage_module VERSION 0.5 LANGUAGES C CXX)
+project(Type_Expr_module VERSION 0.5 LANGUAGES C CXX)
 
 add_subdirectory(include)
 
@@ -10,9 +10,9 @@ add_subdirectory(test)
 
 add_compile_options(-ftemplate-backtrace-limit=0)
 
-set_property(TARGET rage  PROPERTY CXX_STANDARD 11)
+set_property(TARGET Type_Expr  PROPERTY CXX_STANDARD 11)
 
-add_executable(rage_test include/rage.cpp) 
+add_executable(type_expr_test include/type_expr.cpp) 
 
-#target_link_libraries(rage_test rage)
-#add_test(Test_of_rage rage_test)
+target_link_libraries(type_expr_test Type_Expr)
+add_test(Test_of_Type_Expr type_expr_test)
