--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ add_compile_options(-ftemplate-backtrace-limit=0)
 
 set_property(TARGET Type_Expr  PROPERTY CXX_STANDARD 11)
 
-add_executable(type_expr_test include/type_expr.cpp) 
+#add_executable(type_expr_test include/type_expr.cpp) 
 
-target_link_libraries(type_expr_test Type_Expr)
-add_test(Test_of_Type_Expr type_expr_test)
+#target_link_libraries(type_expr_test Type_Expr)
+#add_test(Test_of_Type_Expr type_expr_test)
