--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,6 +1,12 @@
 name: C/C++ CI
 
-on: [push]
+on: 
+  schedule:
+    - cron: " 0 12 * * *"
+  push:
+  release:
+    types: [published]
+    
 
 jobs:
   build-ubuntu:
@@ -13,21 +19,5 @@ jobs:
       run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
     - name: build
       run: cmake --build build
-    - name: test
-      run: cd build && ctest
-
-  build-windows:
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, windows-2016]
-    
-    steps:
-    - uses: actions/checkout@v1
-    - name: configure
-      run: mkdir build && cd build && cmake ..
-    - name: build
-      run: cmake --build build --config Debug
     - name: test
       run: cd build && ctest
