Refactor : product, zip_index This was by far the most difficult refactor (both product and zip_index now returns input_<Ts...> which facilitate some part of the interface but complicate the backend. Eric Niebler's meta-programming challenge is now part of the tests.) removed feature  : insert_at_<int, Fs...> is removed for the moment. will remove unzip in the next commit CMake refactor : Modification for CTest I've just discovered ccmake !!! Properly added tests in cmake. Type_expr is now a library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,31 @@
 #CMAKE
 cmake_minimum_required(VERSION 3.0)
 
-project(Type_Expr_module VERSION 0.5 LANGUAGES C CXX)
+project(type_expr VERSION 0.5)
+include(CTest)
 
-add_subdirectory(include)
+message(STATUS "Type_Expr library CMake Configuration")
 
-enable_testing()
+add_library(type_expr INTERFACE)
+target_include_directories(type_expr INTERFACE
+        $<INSTALL_INTERFACE:include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+
+target_compile_features(type_expr INTERFACE
+        cxx_variadic_templates
+        cxx_constexpr
+        cxx_alias_templates
+        cxx_auto_type
+        cxx_long_long_type
+        cxx_right_angle_brackets
+        cxx_static_assert
+        cxx_uniform_initialization
+        cxx_user_literals
+        ${CPP_EXTRA_FEATURES})
+
+
 add_subdirectory(test)
 
-add_compile_options(-ftemplate-backtrace-limit=0)
 
-set_property(TARGET Type_Expr  PROPERTY CXX_STANDARD 11)
 
-add_executable(type_expr_test include/type_expr.cpp) 
 
-target_link_libraries(type_expr_test Type_Expr)
-add_test(Test_of_Type_Expr type_expr_test)
