tup : Small changes CMake : SMall changes in tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 #CMAKE
 cmake_minimum_required(VERSION 3.0)
 
-project(type_expr VERSION 0.5)
-include(CTest)
+message(STATUS "Type_Expr Library CMake Configuration")
 
-message(STATUS "Type_Expr library CMake Configuration")
+project(type_expr VERSION 0.5)
+
 
 add_library(type_expr INTERFACE)
 target_include_directories(type_expr INTERFACE
@@ -23,7 +23,11 @@ target_compile_features(type_expr INTERFACE
         cxx_user_literals
         ${CPP_EXTRA_FEATURES})
 
-
+# Testing type_expr
+option( TYPE_EXPR_TEST 
+        "Type_expr testing with CTest" 
+        ON)
+include(CTest)
 add_subdirectory(test)
 
 
