--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,13 @@
 #CMAKE
-cmake_minimum_required(VERSION 3.0)
-message(STATUS "Hello Test")
+cmake_minimum_required(VERSION 3.0) 
+message(STATUS "Type_expr's test cmake configuration ")
 
-if(BUILD_TESTING)
-        add_executable(type_expr_test type_expr.cpp) 
-
+if (BUILD_TESTING AND TYPE_EXPR_TEST  )
+        add_executable(type_expr_test type_expr.cpp)
         target_link_libraries(type_expr_test type_expr)
-        add_test(Test_of_Type_Expr type_expr_test)       
-        endif()
+        add_test(Test_of_Type_Expr type_expr_test) 
 
-
+        add_executable(test_tup test_type_tup.cpp)
+        target_link_libraries(test_tup type_expr)
+        add_test(Test_of_Tup test_tup)
+endif()
