Started development of the type_expr::var type Intended to be used as a maybe empty variant. > Modified CMakelists for the tests > type_var.hpp > test_type_var.cpp

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,4 +10,9 @@ if (BUILD_TESTING AND TYPE_EXPR_TEST  )
         add_executable(test_tup test_type_tup.cpp)
         target_link_libraries(test_tup type_expr)
         add_test(Test_of_Tup test_tup)
+
+        add_executable(test_var test_type_var.cpp)
+        target_link_libraries(test_var type_expr)
+        add_test(Test_of_Var test_var)
+
 endif()
