--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,9 +5,9 @@ message(STATUS "Type_expr's test cmake configuration ")
 option(TYPE_EXPR_TEST_MPL
 	"Generate 'te' tests` "
 	ON)
-option(TYPE_EXPR_TEST_MDARRAY
-	"Generate 'te::mdarray' tests` "
-	ON)
+option(TYPE_EXPR_TEST_ARRAY
+	"Generate 'te::array' tests` "
+  ON)
 option(TYPE_EXPR_TEST_TUP
 	"Generate 'te::tup' tests` "
 	ON)
@@ -22,13 +22,13 @@ if (BUILD_TESTING AND TYPE_EXPR_TEST  )
         target_link_libraries(type_expr_test type_expr)
         add_test(Test_of_Type_Expr type_expr_test) 
     endif()
-	if(TYPE_EXPR_TEST_MDARRAY)
-        add_executable(test_mdarray mdarray_test.cpp)
-		set_target_properties(test_mdarray
+	if(TYPE_EXPR_TEST_ARRAY)
+        add_executable(test_array array_test.cpp)
+		set_target_properties(test_array
 			PROPERTIES
 			CXX_STANDARD 14)
-        target_link_libraries(test_mdarray type_expr)
-        add_test(Test_of_MdArray test_mdarray)
+        target_link_libraries(test_array type_expr)
+        add_test(Test_of_MdArray test_array)
 	endif()
 	if(TYPE_EXPR_TEST_TUP)
         add_executable(test_tup tup_test.cpp)
