After consideration, var<typename ... Ts> has being deprecated until further notice. Use mpark::variant, boost::variant, absl::variant or even std::variant instead of my var.
I will revisit (ha!) my implementation one day, and it's technically not
a failure.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,9 +14,6 @@ option(TYPE_EXPR_TEST_TUP
 option(TYPE_EXPR_TEST_VAR
 	"Generate 'te::var' tests` "
 	ON)
-option(TYPE_EXPR_TEST_VARIANT
-	"Generate 'te::variant' tests` "
-	ON)
 
 if (BUILD_TESTING AND TYPE_EXPR_TEST  )
 
@@ -24,7 +21,7 @@ if (BUILD_TESTING AND TYPE_EXPR_TEST  )
         add_executable(type_expr_test expr_test.cpp)
         set_target_properties(type_expr_test PROPERTIES CXX_STANDARD 11)
         target_link_libraries(type_expr_test type_expr)
-        add_test(Test_of_Type_Expr type_expr_test) 
+        add_test(include/type_expr.hpp type_expr_test) 
     endif()
 	if(TYPE_EXPR_TEST_ARRAY)
         add_executable(test_array array_test.cpp)
@@ -32,23 +29,17 @@ if (BUILD_TESTING AND TYPE_EXPR_TEST  )
 			PROPERTIES
 			CXX_STANDARD 14)
         target_link_libraries(test_array type_expr)
-        add_test(Test_of_MdArray test_array)
+        add_test(array<T,size_t...> test_array)
 	endif()
 	if(TYPE_EXPR_TEST_TUP)
         add_executable(test_tup tup_test.cpp)
         set_target_properties(test_tup PROPERTIES CXX_STANDARD 11)
         target_link_libraries(test_tup type_expr)
-        add_test(Test_of_Tup test_tup)
+        add_test(tup<Ts...> test_tup)
 	endif()
 	if(TYPE_EXPR_TEST_VAR)
         add_executable(test_var var_test.cpp)
         target_link_libraries(test_var type_expr)
-        add_test(Test_of_Var test_var)
-    endif()
-	if(TYPE_EXPR_TEST_VARIANT)
-        add_executable(test_variant variant_test.cpp)
-        set_target_properties(test_variant PROPERTIES CXX_STANDARD 17)
-        target_link_libraries(test_variant type_expr)
-        add_test(Test_of_Variant test_variant)
+        add_test(experimental/var<Ts...> test_var)
     endif()
 endif()
