--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,8 +19,9 @@ if (BUILD_TESTING AND TYPE_EXPR_TEST  )
 
 	if(TYPE_EXPR_TEST_MPL)
         add_executable(type_expr_test expr_test.cpp)
+        set_target_properties(type_expr_test PROPERTIES CXX_STANDARD 11)
         target_link_libraries(type_expr_test type_expr)
-        add_test(Test_of_Type_Expr type_expr_test) 
+        add_test(include/type_expr.hpp type_expr_test) 
     endif()
 	if(TYPE_EXPR_TEST_ARRAY)
         add_executable(test_array array_test.cpp)
@@ -28,20 +29,17 @@ if (BUILD_TESTING AND TYPE_EXPR_TEST  )
 			PROPERTIES
 			CXX_STANDARD 14)
         target_link_libraries(test_array type_expr)
-        add_test(Test_of_MdArray test_array)
+        add_test(array<T,size_t...> test_array)
 	endif()
 	if(TYPE_EXPR_TEST_TUP)
         add_executable(test_tup tup_test.cpp)
-		set_target_properties(test_tup
-			PROPERTIES
-			CXX_STANDARD 17)
+        set_target_properties(test_tup PROPERTIES CXX_STANDARD 11)
         target_link_libraries(test_tup type_expr)
-        add_test(Test_of_Tup test_tup)
+        add_test(tup<Ts...> test_tup)
 	endif()
 	if(TYPE_EXPR_TEST_VAR)
         add_executable(test_var var_test.cpp)
         target_link_libraries(test_var type_expr)
-        add_test(Test_of_Var test_var)
+        add_test(experimental/var<Ts...> test_var)
     endif()
-
 endif()
